# opencircuitmodel

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  ci.yml  frontend.yml  release.yml
bench/: README.md  pyproject.toml
bench/bench/: __init__.py  anonymize.py  cli.py  compare.py  metrics.py  runner.py
bench/isolation/frontier-comparison/sandbox-e-schema-compression/: README.md  bench.py  docker-compose.yml  expected.json
bench/isolation/frontier-comparison/sandbox-f-memory-palace-effective-corpus/: README.md  expected.json
bench/isolation/frontier-comparison/sandbox-g-wire-compression/: README.md  expected.json
bench/isolation/frontier-comparison/sandbox-h-fp8-activation-transfer/: README.md  expected.json
bench/isolation/frontier-comparison/sandbox-i-mem0-encryption-overhead/: README.md  bench.py  docker-compose.yml  expected.json
bench/isolation/inference-engines/vllm-q4-llama8b/: README.md  bench.py  docker-compose.yml  expected.json
bench/isolation/memory/letta-tool-memory/: README.md  expected.json
bench/isolation/memory/mem0-library-retrieval-recall/: README.md  bench.py  docker-compose.yml  expected.json
bench/isolation/memory/mem0-ranking-quality-at-bounded-top-k/: README.md  expected.json
bench/isolation/memory/mem0-v3-locomo/: README.md  expected.json
bench/isolation/memory/mem0-v3-memoryarena/: README.md  expected.json
bench/isolation/mesh-transport/multipass-fleet/: README.md  expected.json
bench/isolation/optimization/dspy-gepa-skill-portability/: README.md  expected.json
bench/isolation/retrieval/aider-repomap-fidelity/: README.md  bench.py  docker-compose.yml  expected.json
bench/isolation/retrieval/cognee-8b-graph-quality/: README.md  expected.json
bench/isolation/retrieval/continuedev-hybrid-retrieval/: README.md  expected.json
bench/tests/: test_anonymize.py  test_cli_run_all.py  test_compare.py  test_metrics.py  test_runner.py
bench/workloads/: _generate_chat_singleturn.py  _generate_mcp_tool_defs.py  _generate_mem0_retrieval_recall.py  _generate_mem0_retrieval_workload.py  _generate_repomap_fixture.py  chat-singleturn-1k.jsonl  mcp-tool-defs-30.jsonl  mem0-retrieval-1000q.jsonl  mem0-retrieval-recall-corpus.jsonl  mem0-retrieval-recall.jsonl
bench/workloads/codebase-fixture-python/mylib/: __init__.py  api.py  auth.py  config.py  log.py  store.py  util.py
bench/workloads/codebase-fixture-python/tests/: test_auth.py  test_store.py
crates/ocm-api/: Cargo.toml
crates/ocm-api/src/: auth.rs  lib.rs  openai.rs  registry.rs  streaming.rs
crates/ocm-daemon/: Cargo.toml  tauri.conf.json
crates/ocm-daemon/src/: bootstrap.rs  commands.rs  main.rs  paths.rs  settings.rs  supervisor.rs  tray.rs
crates/ocm-inference/: Cargo.toml
crates/ocm-inference/src/: lib.rs  llamacpp.rs  selector.rs  vllm.rs
crates/ocm-mcp/: Cargo.toml  README.md
crates/ocm-mcp/src/: bridge.rs  dispatch.rs  main.rs  protocol.rs
crates/ocm-memory/: Cargo.toml
crates/ocm-memory/src/: client.rs  lib.rs
crates/ocm-memory/tests/: mem0_smoke.rs
crates/ocm-mesh/: Cargo.toml
crates/ocm-mesh/src/: iroh_transport.rs  lib.rs  libp2p_transport.rs
crates/ocm-models/: Cargo.toml  registry.json
crates/ocm-models/src/: downloader.rs  lib.rs
docs/: benchmarking.md  release-process.md
docs/superpowers/plans/: 2026-05-08-master-operations-plan.md  2026-05-08-ocm-bench-framework-plan.md  2026-05-08-ocm-v1-implementation-plan.md  2026-05-08-ocm-website-plan.md  2026-05-09-bench-sandbox-additions-from-research.md  2026-05-09-frontier-comparison-bench-suite.md
docs/superpowers/protocols/: 2026-05-09-innovation-absorption-cadence.md
docs/superpowers/research/: 2026-05-08-agent-memory-orchestration.md  2026-05-08-investment-market-viability.md  2026-05-08-mesh-distributed-compute.md  2026-05-08-per-node-efficiency.md  2026-05-08-tool-landscape-synthesis.md  2026-05-09-decentralized-memory-palace-pattern.md  2026-05-09-effective-context-triad-expansion-stratification-lookup.md  2026-05-09-encryption-compression-optimizations.md  2026-05-09-memory-context-retrieval-deep-dive.md  2026-05-09-remote-node-deployment.md  2026-05-10-mobile-compute-mesh-analysis.md  tool-watchlist.md
docs/superpowers/specs/: 2026-05-08-ocm-v1-design-spec.md
frontend/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  registry.ts  settings.ts  tauri.ts  types.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/models/: +page.svelte
frontend/src/routes/settings/: +page.svelte
scripts/: populate-registry-hashes.py  populate-registry-hashes.sh  smoke-test-daemon.sh
