[workspace]
resolver = "2"
members = [
    "crates/ocm-api",
    "crates/ocm-daemon",
    "crates/ocm-inference",
    "crates/ocm-mcp",
    "crates/ocm-memory",
    "crates/ocm-mesh",
    "crates/ocm-models",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["OpenCircuit Dev <hello@opencircuitmodel.org>"]
repository = "https://github.com/OpenCircuitDev/opencircuitmodel"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
