[package]
name = "ocm-inference"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
reqwest.workspace = true
futures = "0.3"
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
