[package]
name = "ocm-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ocm-mcp"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
